traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:2: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur() && getDirection() == Direction.EST) {
    ^Snake:9: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur() && getDirection() == Direction.OUEST){
    ^